recommendation/java/quarkus/src/main/deployments/ocp.native/04.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: recommendation-v3-route
  name: recommendation-v3-route
spec:
  port:
    targetPort: 8090
  to:
    kind: Service
    name: recommendation-svc
    weight: 100
  wildcardPolicy: None
